--- a/pages/amaro-details.html
+++ b/pages/amaro-details.html
@@ -38,7 +38,7 @@
   <header id="header">
     <div class="d-flex flex-column">
 
-      <div class="profile">
+      <!-- <div class="profile">
         <img src="../assets/images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="../index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
@@ -46,7 +46,7 @@
           <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/austin-coffman"><i class="bx bxl-github"></i></a>
         </div>
-      </div>
+      </div> -->
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
