--- a/pages/gps-details.html
+++ b/pages/gps-details.html
@@ -1,44 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Austin Coffman | Software Engineer</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-  <title>Austin Coffman | Software Engineer</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link href="../assets/images/favicon.ico" rel="icon" />
+    <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="../assets/images/favicon.ico" rel="icon">
-  <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/boxicons/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="../assets/css/style.css" rel="stylesheet" />
+  </head>
 
-  <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <body>
+    <!-- ======= Mobile nav toggle button ======= -->
+    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-</head>
-
-<body>
-
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
+    <!-- ======= Header ======= -->
+    <header id="header">
+      <div class="d-flex flex-column">
+        <!-- <div class="profile">
         <img src="../assets/images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="../index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
@@ -46,129 +60,199 @@
           <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/austin-coffman"><i class="bx bxl-github"></i></a>
         </div>
+      </div> -->
+
+        <nav id="navbar" class="nav-menu navbar">
+          <ul>
+            <li>
+              <a href="../index.html#hero" class="nav-link scrollto"
+                ><i class="bx bx-home"></i> <span>Home</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#about" class="nav-link scrollto"
+                ><i class="bx bx-user"></i> <span>About</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#technologies" class="nav-link scrollto"
+                ><i class="bx bx-terminal"></i> <span>Technologies</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#soft-skills" class="nav-link scrollto"
+                ><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#resume" class="nav-link scrollto"
+                ><i class="bx bx-file-blank"></i> <span>Resume</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#portfolio" class="nav-link scrollto active"
+                ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#contact" class="nav-link scrollto"
+                ><i class="bx bx-envelope"></i> <span>Contact</span></a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- .nav-menu -->
       </div>
+    </header>
+    <!-- End Header -->
 
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="../index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="../index.html#technologies" class="nav-link scrollto"><i class="bx bx-terminal"></i> <span>Technologies</span></a></li>
-          <li><a href="../index.html#soft-skills" class="nav-link scrollto"><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a></li>
-          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="../index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <ol>
-            <li><a href="../index.html#portfolio">Portfolio</a></li>
-            <li>Graduates Prepared to Succeed</li>
-          </ol>
-        </div>
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4 justify-content-center">
-          
-          <div class="col-lg-10">
-            <div class="portfolio-info">
-              <h3>Project Details</h3>
-              <ul>
-                <li><strong>Name</strong>: Indiana Graduates Prepared to Succeed <i>(GPS)</i></li>
-                <li><strong>Client</strong>: Indiana Department of Education</li>
-                <li><strong>Project Date</strong>: July 2022 - Present</li>
-                <li><strong>Project Site</strong>: <a target="_blank" href="https://indianagps.doe.in.gov">https://indianagps.doe.in.gov</a></li>
-                <li><strong>Tech Stack</strong>: Azure Analysis Service, ASP.NET MVC, PostgreSQL, PowerBI</li>
-                <li><strong>Additional Information</strong>: This project was developed for and used by the Indiana Department of Education (IDOE). 
-                  My role in this project was Senior Engineer for the <i>ASP.NET MVC</i> solution. 
-                  <br>
-                  <br>
-                  This application provides a way for  Indiana’s educators, 
-                  families, communities, and employers with a learner-centered, future-focused dashboard that displays how our students are building the necessary knowledge and skills, in 
-                  all grades and in all schools, through the Indiana Graduates Prepared to Succeed dashboard, or Indiana GPS.
-                  <br>
-                  <br>
-                  This application is a ASP.NET MVC solution that is connected to an Azure Analysis Service to provide data and filtering capabilities using DAX while also integrating with the PowerBI SDK.
-                  <br>
-                  <br>
-                  Press Releases: 
-                  <ul>
-                    <li></li>
-                    <li><a target="_blank" href="https://www.in.gov/doe/about/news/indiana-department-of-education-provides-update-and-first-look-at-indiana-gps-dashboard-development/">Indiana Department of Education Provides Update & First-Look at Indiana GPS Dashboard Development</a></li>
-                    <li><a target="_blank" href="https://www.in.gov/doe/home/indiana-graduates-prepared-to-succeed-indiana-gps/">Indiana Graduates Prepared to Succeed (Indiana GPS)</a></li>
-                    <li><a target="_blank" href="https://www.insideindianabusiness.com/articles/idoe-launches-indiana-gps-dashboard">IDOE Launches Indiana GPS Dashboard</a></li>
-                  </ul>
-                  
-                </li>
-                <hr>
-                <li>If you have any questions, please reach out to me directly.</li>
-
-              </ul>
-            </div>
+    <main id="main">
+      <!-- ======= Breadcrumbs ======= -->
+      <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center">
+            <ol>
+              <li><a href="../index.html#portfolio">Portfolio</a></li>
+              <li>Graduates Prepared to Succeed</li>
+            </ol>
           </div>
+        </div>
+      </section>
+      <!-- End Breadcrumbs -->
 
-          <div class="col-lg-10">
-            <div class="portfolio-info">
-              <h3>Project Images</h3>
-              <div class="col-lg-9 portfolio-details-slider swiper">
-                <div class="swiper-wrapper align-items-center">
+      <!-- ======= Portfolio Details Section ======= -->
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <div class="row gy-4 justify-content-center">
+            <div class="col-lg-10">
+              <div class="portfolio-info">
+                <h3>Project Details</h3>
+                <ul>
+                  <li>
+                    <strong>Name</strong>: Indiana Graduates Prepared to Succeed
+                    <i>(GPS)</i>
+                  </li>
+                  <li>
+                    <strong>Client</strong>: Indiana Department of Education
+                  </li>
+                  <li><strong>Project Date</strong>: July 2022 - Present</li>
+                  <li>
+                    <strong>Project Site</strong>:
+                    <a target="_blank" href="https://indianagps.doe.in.gov"
+                      >https://indianagps.doe.in.gov</a
+                    >
+                  </li>
+                  <li>
+                    <strong>Tech Stack</strong>: Azure Analysis Service, ASP.NET
+                    MVC, PostgreSQL, PowerBI
+                  </li>
+                  <li>
+                    <strong>Additional Information</strong>: This project was
+                    developed for and used by the Indiana Department of
+                    Education (IDOE). My role in this project was Senior
+                    Engineer for the <i>ASP.NET MVC</i> solution.
+                    <br />
+                    <br />
+                    This application provides a way for Indiana’s educators,
+                    families, communities, and employers with a
+                    learner-centered, future-focused dashboard that displays how
+                    our students are building the necessary knowledge and
+                    skills, in all grades and in all schools, through the
+                    Indiana Graduates Prepared to Succeed dashboard, or Indiana
+                    GPS.
+                    <br />
+                    <br />
+                    This application is a ASP.NET MVC solution that is connected
+                    to an Azure Analysis Service to provide data and filtering
+                    capabilities using DAX while also integrating with the
+                    PowerBI SDK.
+                    <br />
+                    <br />
+                    Press Releases:
+                    <ul>
+                      <li></li>
+                      <li>
+                        <a
+                          target="_blank"
+                          href="https://www.in.gov/doe/about/news/indiana-department-of-education-provides-update-and-first-look-at-indiana-gps-dashboard-development/"
+                          >Indiana Department of Education Provides Update &
+                          First-Look at Indiana GPS Dashboard Development</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          target="_blank"
+                          href="https://www.in.gov/doe/home/indiana-graduates-prepared-to-succeed-indiana-gps/"
+                          >Indiana Graduates Prepared to Succeed (Indiana
+                          GPS)</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          target="_blank"
+                          href="https://www.insideindianabusiness.com/articles/idoe-launches-indiana-gps-dashboard"
+                          >IDOE Launches Indiana GPS Dashboard</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <hr />
+                  <li>
+                    If you have any questions, please reach out to me directly.
+                  </li>
+                </ul>
+              </div>
+            </div>
 
-                  <div class="swiper-slide">
-                    <img src="../assets/images/gps/gps-1.jpg" alt="">
+            <div class="col-lg-10">
+              <div class="portfolio-info">
+                <h3>Project Images</h3>
+                <div class="col-lg-9 portfolio-details-slider swiper">
+                  <div class="swiper-wrapper align-items-center">
+                    <div class="swiper-slide">
+                      <img src="../assets/images/gps/gps-1.jpg" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/gps/gps-2.jpg" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/gps/gps-3.jpg" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/gps/gps-4.jpg" alt="" />
+                    </div>
                   </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/gps/gps-2.jpg" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/gps/gps-3.jpg" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/gps/gps-4.jpg" alt="">
-                  </div>
-
+                  <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <!-- End Portfolio Details Section -->
+    </main>
+    <!-- End #main -->
 
-      </div>
-    </section><!-- End Portfolio Details Section -->
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
 
-  </main><!-- End #main -->
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/typed.js/typed.min.js"></script>
+    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/vendor/typed.js/typed.min.js"></script>
-  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
-
-</body>
-
+    <!-- Template Main JS File -->
+    <script src="../assets/js/main.js"></script>
+  </body>
 </html>
