--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header id="header">
     <div class="d-flex flex-column">
 
-      <div class="profile">
+      <!-- <div class="profile">
         <img src="assets/images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
@@ -38,7 +38,7 @@
           <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/austin-coffman"><i class="bx bxl-github"></i></a>
         </div>
-      </div>
+      </div> -->
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
@@ -50,7 +50,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav>
+      </nav> 
     </div>
   </header>
 
@@ -69,38 +69,26 @@
           <h2>About</h2>
           <p>Software Engineer enjoying coffee, cars and computers.</p>
         </div>
-
         <div class="row">
-          <!-- <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/images/headshot.jpeg" class="img-fluid" alt="">
-          </div> -->
+          </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p class="fst-italic">
-              Build it right once, not wrong twice.
+              Here are some of my favorite <strong><a href="https://en.wikipedia.org/wiki/Aphorism" target="_blank">Aphorisms</a></strong>
             </p>
-            <!-- <div class="row">
-              <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-12">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>austincartercoffman@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Nothing is more permanent than a temporary fix.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>I don't need to be a chef to know when the food taste bad.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>All code is bad, but not all code adds value.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>There are two hard problems in computer science: cache invalidation, naming things, and off-by-one errors.</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p> -->
           </div>
         </div>
-
       </div>
     </section>
     <!-- End About Section -->
@@ -529,7 +517,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>If you'd like to know more about me, or pay me money, then drop a message.</p>
+          <p>If you'd like to know more about me, or pay me money, then drop a message. Otherwise, you can check out my <strong><a href="https://www.linkedin.com/in/austin-coffman-82b4a495/" target="_blank">LinkedIn</a></strong> or <strong><a href="https://github.com/austin-coffman" target="_blank">GitHub</a></strong></p>
         </div>
 
         <div class="row justify-content-center" data-aos="fade-in">
