--- a/pages/eseat-details.html
+++ b/pages/eseat-details.html
@@ -1,46 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Austin Coffman | Software Engineer</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-  <title>Austin Coffman | Software Engineer</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link href="../assets/images/favicon.ico" rel="icon" />
+    <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="../assets/images/favicon.ico" rel="icon">
-  <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/boxicons/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="../assets/css/style.css" rel="stylesheet" />
 
-  <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
-  
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
-</head>
+    <!-- Template Main JS File -->
+    <script src="../assets/js/main.js"></script>
+  </head>
 
-<body>
+  <body>
+    <!-- ======= Mobile nav toggle button ======= -->
+    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
+    <!-- ======= Header ======= -->
+    <header id="header">
+      <div class="d-flex flex-column">
+        <!-- <div class="profile">
         <img src="../assets/images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="../index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
@@ -48,130 +63,175 @@
           <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/austin-coffman"><i class="bx bxl-github"></i></a>
         </div>
+      </div> -->
+
+        <nav id="navbar" class="nav-menu navbar">
+          <ul>
+            <li>
+              <a href="../index.html#hero" class="nav-link scrollto"
+                ><i class="bx bx-home"></i> <span>Home</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#about" class="nav-link scrollto"
+                ><i class="bx bx-user"></i> <span>About</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#technologies" class="nav-link scrollto"
+                ><i class="bx bx-terminal"></i> <span>Technologies</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#soft-skills" class="nav-link scrollto"
+                ><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#resume" class="nav-link scrollto"
+                ><i class="bx bx-file-blank"></i> <span>Resume</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#portfolio" class="nav-link scrollto active"
+                ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+              >
+            </li>
+            <li>
+              <a href="../index.html#contact" class="nav-link scrollto"
+                ><i class="bx bx-envelope"></i> <span>Contact</span></a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- .nav-menu -->
       </div>
+    </header>
+    <!-- End Header -->
 
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="../index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="../index.html#technologies" class="nav-link scrollto"><i class="bx bx-terminal"></i> <span>Technologies</span></a></li>
-          <li><a href="../index.html#soft-skills" class="nav-link scrollto"><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a></li>
-          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="../index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <ol>
-            <li><a href="../index.html#portfolio">Portfolio</a></li>
-            <li>ESEAT</li>
-          </ol>
-        </div>
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-10">
-            <div class="portfolio-info">
-              <h3>Project Details</h3>
-              <ul>
-                <li><strong>Name</strong>: Electromagnetic Spectrum Environment Analysis Tool <i>(ESEAT)</i></li>
-                <li><strong>Client</strong>: NSWC Crane</li>
-                <li><strong>Project Date</strong>: Aug 2021 - Current</li>
-                <li><strong>Project Site</strong>: <i style="color: darkgrey;">redacted</i></li>
-                <li><strong>Tech Stack</strong>: Python Backend, .NET API Middleware, React.js Frontend</li>
-                <li><strong>Additional Information</strong>: This project was developed for and used by the Department of Defense (NSWC Crane). 
-                  My role in this project was Senior Engineer for the <i>.NET API</i> solution. 
-                  I lead a team of 2 developers, this is a smaller budget project and delivering value without going over budget was tricky.
-                  <br>
-                  <br>
-                  The primary goal of this project is to curated budgetary documents in an easy-to-search application. Elasticsearch is utilized when searching for content/keywords. There are also dynamic aggregate views of budgetary data. 
-                  <br>
-                  <br>
-                  Our Data Science team has created an API that we (backend engineers) interface with, this allows us to create user specific grouping (bookmarks) and system wide tagging (tags), 
-                  such that an analyst at the DoD could curate a list of budgetary data and view aggregated charts/graphs on that data.
-                </li>
-                <hr>
-                <li>If you have any questions, please reach out to me directly.</li>
-
-              </ul>
-            </div>
+    <main id="main">
+      <!-- ======= Breadcrumbs ======= -->
+      <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center">
+            <ol>
+              <li><a href="../index.html#portfolio">Portfolio</a></li>
+              <li>ESEAT</li>
+            </ol>
           </div>
+        </div>
+      </section>
+      <!-- End Breadcrumbs -->
 
+      <!-- ======= Portfolio Details Section ======= -->
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <div class="row gy-4 justify-content-center">
+            <div class="col-lg-10">
+              <div class="portfolio-info">
+                <h3>Project Details</h3>
+                <ul>
+                  <li>
+                    <strong>Name</strong>: Electromagnetic Spectrum Environment
+                    Analysis Tool <i>(ESEAT)</i>
+                  </li>
+                  <li><strong>Client</strong>: NSWC Crane</li>
+                  <li><strong>Project Date</strong>: Aug 2021 - Current</li>
+                  <li>
+                    <strong>Project Site</strong>:
+                    <i style="color: darkgrey">redacted</i>
+                  </li>
+                  <li>
+                    <strong>Tech Stack</strong>: Python Backend, .NET API
+                    Middleware, React.js Frontend
+                  </li>
+                  <li>
+                    <strong>Additional Information</strong>: This project was
+                    developed for and used by the Department of Defense (NSWC
+                    Crane). My role in this project was Senior Engineer for the
+                    <i>.NET API</i> solution. I lead a team of 2 developers,
+                    this is a smaller budget project and delivering value
+                    without going over budget was tricky.
+                    <br />
+                    <br />
+                    The primary goal of this project is to curated budgetary
+                    documents in an easy-to-search application. Elasticsearch is
+                    utilized when searching for content/keywords. There are also
+                    dynamic aggregate views of budgetary data.
+                    <br />
+                    <br />
+                    Our Data Science team has created an API that we (backend
+                    engineers) interface with, this allows us to create user
+                    specific grouping (bookmarks) and system wide tagging
+                    (tags), such that an analyst at the DoD could curate a list
+                    of budgetary data and view aggregated charts/graphs on that
+                    data.
+                  </li>
+                  <hr />
+                  <li>
+                    If you have any questions, please reach out to me directly.
+                  </li>
+                </ul>
+              </div>
+            </div>
 
-          <div class="col-lg-10">
-            <div class="portfolio-info">
-              <h3>Project Images</h3>
-              <div class="col-lg-9 portfolio-details-slider swiper">
-                <div class="swiper-wrapper align-items-center">
+            <div class="col-lg-10">
+              <div class="portfolio-info">
+                <h3>Project Images</h3>
+                <div class="col-lg-9 portfolio-details-slider swiper">
+                  <div class="swiper-wrapper align-items-center">
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-1.JPG" alt="" />
+                    </div>
 
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-1.JPG" alt="">
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-2.JPG" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-3.JPG" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-4.JPG" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-5.JPG" alt="" />
+                    </div>
+
+                    <div class="swiper-slide">
+                      <img src="../assets/images/eseat/eseat-6.JPG" alt="" />
+                    </div>
                   </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-2.JPG" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-3.JPG" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-4.JPG" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-5.JPG" alt="">
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img src="../assets/images/eseat/eseat-6.JPG" alt="">
-                  </div>
-
+                  <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
               </div>
             </div>
           </div>
-
-          
-
         </div>
+      </section>
+      <!-- End Portfolio Details Section -->
+    </main>
+    <!-- End #main -->
 
-      </div>
-    </section><!-- End Portfolio Details Section -->
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
 
-  </main><!-- End #main -->
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/typed.js/typed.min.js"></script>
+    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/vendor/typed.js/typed.min.js"></script>
-  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
-
-</body>
-
+    <!-- Template Main JS File -->
+    <script src="../assets/js/main.js"></script>
+  </body>
 </html>
