--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Software Engineer enjoying coffee, cars and computers.</p>
+          <p>Software Engineer enjoying coffee, cars, and computers.</p>
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
@@ -153,7 +153,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-windows"></i></div>
             <h4 class="title">.NET</h4>
-            <p class="description">7+ years of .NET experience, building APIs that are easy to understand and use, creating maintainable code that is unit testable, and documenting process while following best practices.</p>
+            <p class="description">8+ years of .NET experience, building APIs that are easy to understand and use, creating maintainable code that is unit testable, and documenting process while following best practices.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-data"></i></div>
@@ -173,7 +173,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-cloud"></i></div>
             <h4 class="title">Cloud Services</h4>
-            <p class="description">Developed apps using AWS, Azure, GCP using Compute, Storage, Network services, and many more. Lots of integrations with Azure Active Directory.</p>
+            <p class="description">Developed apps using AWS, Azure, GCP using Compute, Storage, Network services, and many more. Lots of integrations with Azure Entra.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-network-chart"></i></div>
@@ -244,7 +244,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Austin Coffman</h4>
-              <p><em>Results-driven human with 7+ years in Software Engineering, ready to fearlessly solve problems. 
+              <p><em>Results-driven human with 8+ years in Software Engineering, ready to fearlessly solve problems. 
                 Proven ability to multi-task in a dynamic fast-paced environment while delivering outcomes.
                 Lastly, a firm believer that <u>people are key</u>, all things software start and end with people.</em></p>
             </div>
@@ -292,7 +292,7 @@
                 <li>Leading a team of 5 software engineers with a variety of backgrounds and skill levels, ranging from junior to staff.</li>
                 <li>Pushing the direction of our 30+ person engineering department on topics such as tooling, process, values, mentoring - this includes a revamp of our entire CI/CD process.</li>
                 <li>Directing our hiring vision, focused on early career development and career pathways. In 2024, we hired 6 engineers and 2 interns.</li>
-                <li>Continuing to perform at a TSO level and leading project, while supporting others doing the same.</li>
+                <li>Continuing to perform at a TSO level by leading projects, system design, technology consultation all while supporting others doing the same.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -322,7 +322,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Application Engineer</h4>
+              <h4>Software Engineer</h4>
               <h5>Jun 2017 - Dec 2019</h5>
               <p><em>Cosworth Electronics | Motorsport Electronics | Indianapolis, IN </em></p>
               <ul>
