--- a/index.html
+++ b/index.html
@@ -244,9 +244,11 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Austin Coffman</h4>
-              <p><em>Results-driven human with 8+ years in Software Engineering, ready to fearlessly solve problems. 
-                Proven ability to multi-task in a dynamic fast-paced environment while delivering outcomes.
-                Lastly, a firm believer that <u>people are key</u>, all things software start and end with people.</em></p>
+              <p><em>Results-driven engineering leader with 8+ years of experience guiding teams and
+                architecting scalable solutions. Passionate about tackling complex engineering challenges,
+                optimizing systems, and fostering team growth. Excels in fast-paced environments,
+                balancing hands-on technical expertise with strategic leadership. Firm believer that <u>people
+                are key</u>, and that software starts and ends with people</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -289,10 +291,21 @@
               <h5>Feb 2024 - Present</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
-                <li>Leading a team of 5 software engineers with a variety of backgrounds and skill levels, ranging from junior to staff.</li>
-                <li>Pushing the direction of our 30+ person engineering department on topics such as tooling, process, values, mentoring - this includes a revamp of our entire CI/CD process.</li>
-                <li>Directing our hiring vision, focused on early career development and career pathways. In 2024, we hired 6 engineers and 2 interns.</li>
-                <li>Continuing to perform at a TSO level by leading projects, system design, technology consultation all while supporting others doing the same.</li>
+                <li>
+                  Managing and mentoring a diverse team of 5 engineers (Junior to Staff), providing a culture of
+                  continuous improvement and learning.
+                </li>
+                <li>
+                  Driving the direction of our 30+ person engineering department on topics such as tooling, process,
+                  values, mentoring, and career pathways.
+                </li>
+                <li>
+                  Orchestrating a hiring strategy, successfully recruiting 6 engineers and 2 interns in 2024.
+                </li>
+                <li>
+                  Serving as Technical Solution Owner (TSO), directing system architecture, collaborating cross-functionally,
+                  and advising on technology solutions.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -300,12 +313,27 @@
               <h5>Feb 2022 - Feb 2024</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
-                <li>TSO for several private and public sector development projects - ranging from the state of Indiana to the Department of Defense.</li>
-                <li>Deploy cloud-based solutions in Azure, AWS and GCP.</li>
-                <li>Create CI/CD pipelines for a variety of deployment constraints.</li>
-                <li>Implemented a custom GraphQL based Query Builder tool that allows users to query any parameter in a relational way to generate results, reports, comparisons, and exports. All custom and in-house, while being scalable.</li>
-                <li>Optimize legacy systems to greatly improve performance in data acquisition, load times, and security vulnerabilities.</li>
-                <li>Consult new clients/projects as a solution architect, providing possible solutions, outcomes, timelines, estimations, and expectations.</li>
+                <li>
+                  Advised on new client projects as a solution architect, delivering strategic recommendations, outcomes,
+                  timelines, and expectations.
+                </li>
+                <li>
+                  Guided junior engineers through mentorship, conducting code reviews and leading knowledge-sharing
+                  session initiatives.
+                </li>
+                <li>
+                  Deployed cloud-based solutions across Azure, AWS and GCP.
+                </li>
+                <li>
+                  Implemented a custom GraphQL based Query Builder tool that allows users to query any parameter in a relational way 
+                  to generate results, reports, comparisons, and exports. All custom and in-house, while being scalable.
+                </li>
+                <li>
+                  Developed and automated CI/CD pipelines tailored to diverse deployment constraints.
+                </li>
+                <li>
+                  Refactored legacy systems, adding significant performance gains in data acquisition and load times.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -313,12 +341,22 @@
               <h5>Jan 2020 - Feb 2022</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
-                <li>Manufactured RESTful APIs using .NET with several unique database and datasource connections, processes, authentication, and data transformation.</li>
-                <li>Collaborated with Front End and Data Engineers, sorting issues and working through the SDLC.</li>
-                <li>Deep understanding of many .NET packages, including Entity Framework, LINQ, and Identity.</li>
-                <li>Designed and maintained performant relational databases.</li>
-                <li>Worked in many Agile project management practices.</li>
-                <li>Implemented application wide notifications using SignalR.</li>
+                <li>
+                  Built and optimized RESTful APIs using primarily .NET, integrating multiple databases, background
+                  processes, authentication, and data transformation.
+                </li>
+                <li>
+                  Partnered with cross-functional teams, troubleshooting issues and steering projects through the SDLC.
+                </li>
+                <li>
+                  Leveraged deep expertise in .NET packages, including Entity Framework, LINQ, and Identity.
+                </li>
+                <li>
+                  Architected and optimized high-performant relational databases.
+                </li>
+                <li>
+                  Integrated WebSockets for real-time in-app notifications, improving system responsiveness.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -326,14 +364,22 @@
               <h5>Jun 2017 - Dec 2019</h5>
               <p><em>Cosworth Electronics | Motorsport Electronics | Indianapolis, IN </em></p>
               <ul>
-                <li>Developed and maintained software in a source-controlled environment (TFS/GitHub).</li>
-                <li>Managed the <i>Live on Air</i> WiMAX 3G telemetry system for the <i>IndyCar</i> Series.
-                    This involved a suite of software ranging from data analysis tools to hardware configuration tools.</li>
-                <li>Curated documentation for actively developed software and products.</li>
-                <li>Interfaced with executive customers and high-level engineers as a technical resource.</li>
-                <li>Performed root-cause analysis and problem solving.</li>
-                <li>Maintained several .NET Framework projects.</li>
-                
+                <li>
+                  Developed and maintained software in a source-controlled environment (TFS).
+                </li>
+                <li>
+                  Managed the <i>Live on Air</i> WiMAX 3G telemetry system for the <i>IndyCar</i> Series.
+                  This involved a suite of software ranging from data analysis tools to hardware configuration tools.
+                </li>
+                <li>
+                  Authored and maintained documentation for actively developed software and products.
+                </li>
+                <li>
+                  Interfaced with executive customers and senior engineers as a technical resource.
+                </li>
+                <li>
+                  Maintained multiple .NET Framework projects, resolving defects and implementing new features.
+                </li>
               </ul>
             </div>
           </div>
@@ -370,7 +416,7 @@
               <img src="assets/images/gps/gps-0.jpg" class="card-img-top" alt="">
               <div class="card-body card-container d-flex flex-column">
                 <h5 class="card-title">Graduates Prepared to Succeed</h5>
-                <p class="card-text text-muted">Built for the Indiana Department of Education, serving as a state wide metric for student and school performance.</p>
+                <p class="card-text text-muted">Built for the Indiana Department of Education, serving as a state wide metrics for student and school performance.</p>
                 <a class="card-button align-self-end" href="pages/gps-details.html">More Details</i></a>
               </div>
             </div>
