--- a/index.html
+++ b/index.html
@@ -287,23 +287,43 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Senior Software Engineer</h4>
+              <h5>Jun 2025 - Present</h5>
+              <p><em>Emergent Software | Technology Consulting | Indianapolis, IN </em></p>
+              <ul>
+                <li>
+                  Architecting new applications and features using industry standard best practices.
+                </li>
+                <li>
+                  Meeting with clients to craft technology solutions that meet their business needs and estimate the effort required to deliver.
+                </li>
+                <li>
+                  Participating in technical requirements gathering, technology selection, data modeling, Azure infrastructure design, 
+                  and DevOps & CI/CD process design.
+                </li>
+                <li>
+                  Deepening expertise in the Microsoft ecosystem, while providing clients the best possible solutions.
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Software Engineering Manager</h4>
-              <h5>Feb 2024 - Present</h5>
+              <h5>Feb 2024 - Jun 2025</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
                 <li>
-                  Managing and mentoring a diverse team of 5 engineers (Junior to Staff), providing a culture of
+                  Managed and mentoring a diverse team of 5 engineers (Junior to Staff), providing a culture of
                   continuous improvement and learning.
                 </li>
                 <li>
-                  Driving the direction of our 30+ person engineering department on topics such as tooling, process,
+                  Drove the direction of our 30+ person engineering department on topics such as tooling, process,
                   values, mentoring, and career pathways.
                 </li>
                 <li>
-                  Orchestrating a hiring strategy, successfully recruiting 6 engineers and 2 interns in 2024.
+                  Orchestrated a hiring strategy, successfully recruiting 6 engineers and 2 interns in 2024.
                 </li>
                 <li>
-                  Serving as Technical Solution Owner (TSO), directing system architecture, collaborating cross-functionally,
+                  Served as Technical Solution Owner (TSO), directing system architecture, collaborating cross-functionally,
                   and advising on technology solutions.
                 </li>
               </ul>
